@@ -357,7 +357,10 @@ static int getscochar(CSOUND *csound, int expand)
       }
     }
     if (c == '\r') {    /* can only occur in files, and not in macros */
-      if ((c = getc(ST(str)->file)) != '\n')
+      if (ST(str)->string) {
+        if ((c = *ST(str)->body++) != '\n') ST(str)->body--;
+      }
+      else if ((c = getc(ST(str)->file)) != '\n')
         ungetc(c, ST(str)->file);   /* For macintosh */
       c = '\n';
     }
